--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,24 @@
 # data
 mnist_cnn/data
 
-#vscode
+# vscode
 mnist_cnn/.vscode
 
-#cache
+# cache
 __pycache__/
 
-#model 
+# model 
 *.model
 
 *.jpg
 *.pdf
+*.gif
+*.uvf
 mnist_cnn/visualize_preprocessing
+
+# make
+*_done
+
+# old stuff
+mnist_cnn/old_sampling
+
