--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 
 # data
 mnist_cnn/data
-
-# vscode
-mnist_cnn/.vscode
+*.uvf
 
 # cache
 __pycache__/
@@ -14,13 +12,14 @@ __pycache__/
 # model 
 *.model
 
+# images
 *.jpg
 *.pdf
 *.gif
-*.uvf
 
 # make
 *_done
+*/build
 
 # old stuff
 mnist_cnn/old
