adding prediction visualization

--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -1,10 +1,17 @@
-all: visualize_preprocessing
+all: visualize_preprocessing \
+	visualize_predictions
 
 visualize_preprocessing: build/visualize_preprocessing_done
+visualize_predictions: build/visualize_predictions_done
 
 build/visualize_preprocessing_done:
 	mkdir -p build
 	python visualize_preprocessing.py
+	touch visualize_preprocessing_done
+
+build/visualize_preprocessing_done:
+	mkdir -p build
+	python visualize_predections.py
 
 clean:
 	rm -rf build/
