--- a/travis.yml
+++ b/travis.yml
@@ -3,8 +3,8 @@ python:
   - "3.7"
 
 before_install:
-  - apt install libgeos-dev
-  - apt install libproj-dev
+  - sudo apt-get -y install libgeos-dev
+  - sudo apt-get -y install libproj-dev
 
 install:
   - pip install .
