Added mkdir for missing folder

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -38,6 +38,7 @@ cnn_training: ./training_done
 		../sampling/layouts/vlba.txt -train False 
 
 ./training_done:
+		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
 		./data/mnist_samp_valid.h5 ./models/cuda_test.model\
 		10 5e-1 -log True -mask True\
