Added clean tasks

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -16,6 +16,11 @@ mnist_fft: ./data/mnist_fft_done
 mnist_samp_train: ./data/mnist_samp_train.h5
 mnist_samp_valid: ./data/mnist_samp_valid.h5
 cnn_training: ./training_done
+clean:
+	rm -rf ./data
+	rm -f ./training_done
+clean_training:
+	rm -f ./training_done
 
 #########################################################
 #	Tasks
