Added functionality for quick data and training in one command

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -5,6 +5,10 @@
 all:	mnist_fft\
 		mnist_samp
 
+quick_data_and_training: mnist_fft_quick\
+						 mnist_samp\
+						 cnn_training
+
 #--------------------------------------------------------
 
 mnist_samp:	mnist_samp_train\
@@ -13,6 +17,7 @@ mnist_samp:	mnist_samp_train\
 #--------------------------------------------------------
 
 mnist_fft: ./data/mnist_fft_done
+mnist_fft_quick: ./data/mnist_fft_done_quick
 mnist_samp_train: ./data/mnist_samp_train.h5
 mnist_samp_valid: ./data/mnist_samp_valid.h5
 cnn_training: ./training_done
@@ -25,6 +30,12 @@ cnn_training: ./training_done
 		mkdir -p data/
 		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
 		./data -test False
+		touch ./data/mnist_fft_done
+
+./data/mnist_fft_done_quick:
+		mkdir -p data/
+		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
+		./data -test True
 		touch ./data/mnist_fft_done
 
 ./data/mnist_samp_train.h5:
