put model predictions into makefile

--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -9,9 +9,46 @@ build/visualize_preprocessing_done:
 	python visualize_preprocessing.py
 	touch visualize_preprocessing_done
 
-build/visualize_preprocessing_done:
+build/visualize_predictions_done:
 	mkdir -p build
-	python visualize_predections.py
+	python visualize_predictions.py \
+	../models/cnn_architecture.py \
+	../models/hamburg2.model \
+	../data/mnist_samp_valid.h5 \
+	../data/normalization_factors.csv \
+	build/prediction1.pdf \
+	-index 42
+
+new_shapes: new_shapes/visualize_gauss_done \
+			new_shapes/visualize_circle_done \
+			new_shapes/visualize_source_done
+
+new_shapes/visualize_gauss_done:
+	mkdir -p new_shapes
+	python visualize_predictions.py \
+	../models/cnn_architecture.py \
+	../models/hamburg2.model \
+	test_data/gauss.hdf5 \
+	../data/normalization_factors.csv \
+	new_shapes/gauss.pdf
+
+new_shapes/visualize_circle_done:
+	mkdir -p new_shapes
+	python visualize_predictions.py \
+	../models/cnn_architecture.py \
+	../models/hamburg2.model \
+	test_data/circle.hdf5 \
+	../data/normalization_factors.csv \
+	new_shapes/circle.pdf
+
+new_shapes/visualize_source_done:
+	mkdir -p new_shapes
+	python visualize_predictions.py \
+	../models/cnn_architecture.py \
+	../models/hamburg2.model \
+	test_data/source.hdf5 \
+	../data/normalization_factors.csv \
+	new_shapes/source.pdf
 
 clean:
 	rm -rf build/
@@ -19,3 +56,6 @@ clean:
 clean_visualize_preprocessing:
 	rm -rf build/x*.pdf
 	rm -rf build/y*.pdf
+
+clean_new_shapes:
+	rm -rf new_shapes
