Changed Makefile and visualize_predictions according to new structure

--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -12,8 +12,8 @@ build/visualize_preprocessing_done:
 build/visualize_predictions_done:
 	mkdir -p build
 	python visualize_predictions.py \
-	../models/cnn_architecture.py \
-	../models/hamburg2.model \
+	cnn \
+	../models/test.model \
 	../data/mnist_samp_valid.h5 \
 	../data/normalization_factors.csv \
 	build/prediction1.pdf \
@@ -26,7 +26,7 @@ new_shapes: new_shapes/visualize_gauss_done \
 new_shapes/visualize_gauss_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
-	../models/cnn_architecture.py \
+	cnn \
 	../models/hamburg2.model \
 	test_data/gauss.hdf5 \
 	../data/normalization_factors.csv \
@@ -35,7 +35,7 @@ new_shapes/visualize_gauss_done:
 new_shapes/visualize_circle_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
-	../models/cnn_architecture.py \
+	cnn \
 	../models/hamburg2.model \
 	test_data/circle.hdf5 \
 	../data/normalization_factors.csv \
@@ -44,7 +44,7 @@ new_shapes/visualize_circle_done:
 new_shapes/visualize_source_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
-	../models/cnn_architecture.py \
+	cnn \
 	../models/hamburg2.model \
 	test_data/source.hdf5 \
 	../data/normalization_factors.csv \
