--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -7,8 +7,10 @@ all:	mnist_fft\
 		calc_normalization
 
 quick_data_and_training: mnist_fft_quick\
+						 clean_samp\
 						 mnist_samp\
 						 calc_normalization\
+						 clean_training\
 						 cnn_training
 
 #--------------------------------------------------------
@@ -33,7 +35,7 @@ input_plot: ./data/plots/input_done
 ./data/mnist_fft_done:
 		mkdir -p data/
 		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -test False -noise True
+		./data -test False -noise False
 		touch ./data/mnist_fft_done
 
 ./data/mnist_fft_done_quick:
@@ -54,17 +56,17 @@ input_plot: ./data/plots/input_done
 
 ./data/normalization_factors.csv:
 		python calculate_normalization.py\
-		-log True -use_mask True\
+		-log False -use_mask True\
 		data/mnist_samp_train.h5 data/mnist_samp_valid.h5\
 		data/normalization_factors.csv
 
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/cuda_test.model\
+		./data/mnist_samp_valid.h5 ./models/two_channels.model\
 		cnn ./data/normalization_factors.csv\
-		10 5e-1 -log True\
-		-pretrained False\
+		1 1e-3 -log False\
+		-pretrained True ./models/two_channels.model\
 		-inspection True
 		touch ./training_done
 
@@ -83,3 +85,5 @@ clean_training:
 
 clean_input_plot:
 	rm -rf ./data/plots
+clean_samp:
+	rm -f ./data/*_samp_*.h5
