--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -63,10 +63,10 @@ input_plot: ./data/plots/input_done
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/two_channels.model\
+		./data/mnist_samp_valid.h5 ./models/two_channels_new.model\
 		cnn ./data/normalization_factors.csv\
-		1 1e-3 -log False\
-		-pretrained True ./models/two_channels.model\
+		100 1e-3 -log False\
+		-pretrained False ./models/two_channels.model\
 		-inspection True
 		touch ./training_done
 
