--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -33,7 +33,7 @@ input_plot: ./data/plots/input_done
 ./data/mnist_fft_done:
 		mkdir -p data/
 		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -test False -noise True
+		./data -test False -noise False
 		touch ./data/mnist_fft_done
 
 ./data/mnist_fft_done_quick:
@@ -54,17 +54,17 @@ input_plot: ./data/plots/input_done
 
 ./data/normalization_factors.csv:
 		python calculate_normalization.py\
-		-log True -use_mask True\
+		-log False -use_mask False\
 		data/mnist_samp_train.h5 data/mnist_samp_valid.h5\
 		data/normalization_factors.csv
 
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/cuda_test.model\
+		./data/mnist_samp_valid.h5 ./models/one_mask_no_noise.model\
 		cnn ./data/normalization_factors.csv\
-		10 5e-1 -log True\
-		-pretrained False\
+		750 1e-3 -log False\
+		-pretrained False \
 		-inspection True
 		touch ./training_done
 
