--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -54,7 +54,7 @@ input_plot: ./data/plots/input_done
 ./data/mnist_samp_valid.h5:
 		python create_mnist_fft_sampled.py\
 		data/mnist_valid.h5 data/mnist_samp_valid.h5\
-		../sampling/layouts/vlba.txt -train False
+		../sampling/layouts/vlba.txt -train False\
 		-specific_mask True\
 		-lon -80\
 		-lat 50\
@@ -62,16 +62,16 @@ input_plot: ./data/plots/input_done
 
 ./data/normalization_factors.csv:
 		python calculate_normalization.py\
-		-log True -use_mask True\
+		-log False -use_mask True\
 		data/mnist_samp_train.h5 data/mnist_samp_valid.h5\
 		data/normalization_factors.csv
 
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/one_mask_no_noise_log.model\
+		./data/mnist_samp_valid.h5 ./models/test_one_mask.model\
 		cnn ./data/normalization_factors.csv\
-		750 3e-1 -log True\
+		10 3e-1 -log False\
 		-pretrained False \
 		-inspection True
 		touch ./training_done
