adjust for 2 channel

--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -4,6 +4,9 @@ all: visualize_preprocessing \
 visualize_preprocessing: build/visualize_preprocessing_done
 visualize_predictions: build/visualize_predictions_done
 
+model=../models/two_channels.model
+norm=../data/normalization_factors.csv
+
 build/visualize_preprocessing_done:
 	mkdir -p build
 	python visualize_preprocessing.py
@@ -13,12 +16,13 @@ build/visualize_predictions_done:
 	mkdir -p build
 	python visualize_predictions.py \
 	cnn \
-	../models/test.model \
+	$(model) \
 	../data/mnist_samp_valid.h5 \
-	../data/normalization_factors.csv \
+	$(norm) \
 	build/prediction1.pdf \
 	-index 42
 
+# ------------------------------------------------------
 new_shapes: new_shapes/visualize_gauss_done \
 			new_shapes/visualize_circle_done \
 			new_shapes/visualize_source_done
@@ -27,28 +31,30 @@ new_shapes/visualize_gauss_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
 	cnn \
-	../models/hamburg2.model \
+	$(model) \
 	test_data/gauss.hdf5 \
-	../data/normalization_factors.csv \
+	$(norm) \
 	new_shapes/gauss.pdf
 
 new_shapes/visualize_circle_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
 	cnn \
-	../models/hamburg2.model \
+	$(model) \
 	test_data/circle.hdf5 \
-	../data/normalization_factors.csv \
+	$(norm) \
 	new_shapes/circle.pdf
 
 new_shapes/visualize_source_done:
 	mkdir -p new_shapes
 	python visualize_predictions.py \
 	cnn \
-	../models/hamburg2.model \
+	$(model) \
 	test_data/source.hdf5 \
-	../data/normalization_factors.csv \
+	$(norm) \
 	new_shapes/source.pdf
+
+# ------------------------------------------------------
 
 clean:
 	rm -rf build/
