--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -73,8 +73,8 @@ input_plot: ./data/plots/input_done
 		python train_cnn.py ./data/mnist_samp_train.h5\
 		./data/mnist_samp_valid.h5 ./models/two_channels.model\
 		cnn ./data/normalization_factors.csv\
-		250 1e-3 -log False\
-		-pretrained True ./models/two_channels.model \
+		50 1e-3 -log False\
+		-pretrained False ./models/two_channels.model \
 		-inspection True
 		touch ./training_done
 
