--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -4,7 +4,7 @@ all: visualize_preprocessing \
 visualize_preprocessing: build/visualize_preprocessing_done
 visualize_predictions: build/visualize_predictions_done
 
-model=../models/two_channels.model
+model=../models/l1_loss2.model
 norm=../data/normalization_factors.csv
 
 build/visualize_preprocessing_done:
@@ -19,8 +19,7 @@ build/visualize_predictions_done:
 	$(model) \
 	../data/mnist_samp_valid.h5 \
 	$(norm) \
-	build/prediction1.pdf \
-	-index 42
+	build/prediction.png \
 
 # ------------------------------------------------------
 new_shapes: new_shapes/visualize_gauss_done \
