--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -4,7 +4,7 @@ all: visualize_preprocessing \
 visualize_preprocessing: build/visualize_preprocessing_done
 visualize_predictions: build/visualize_predictions_done
 
-model=../models/l1_loss2.model
+model=../models/mse_loss.model
 norm=../data/normalization_factors.csv
 
 build/visualize_preprocessing_done:
@@ -20,6 +20,7 @@ build/visualize_predictions_done:
 	../data/mnist_samp_valid.h5 \
 	$(norm) \
 	build/prediction.png \
+	-index 42
 
 # ------------------------------------------------------
 new_shapes: new_shapes/visualize_gauss_done \
