--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -71,12 +71,12 @@ input_plot: ./data/plots/input_done
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/two_channels.model\
+		./data/mnist_samp_valid.h5 ./models/outsourc_fft.model\
 		cnn ./data/normalization_factors.csv\
-		50 1e-3 -log False\
+		10 1e-3 -log False\
 		-pretrained False ./models/two_channels.model \
 		-inspection True
-		touch ./training_done
+		# touch ./training_done
 
 ./data/plots/input_done:
 		mkdir -p data/
