Fixed a missing bracket and added the option
for variable number of plots

--- a/mnist_cnn/visualize/Makefile
+++ b/mnist_cnn/visualize/Makefile
@@ -4,7 +4,7 @@ all: visualize_preprocessing \
 visualize_preprocessing: build/visualize_preprocessing_done
 visualize_predictions: build/visualize_predictions_done
 
-model=../models/mse_loss.model
+model=../models/test_pred.model
 norm=../data/normalization_factors.csv
 
 build/visualize_preprocessing_done:
@@ -20,7 +20,8 @@ build/visualize_predictions_done:
 	../data/mnist_samp_valid.h5 \
 	$(norm) \
 	build/prediction.png \
-	-index 42
+	-index 42 \
+	-num 20
 
 # ------------------------------------------------------
 new_shapes: new_shapes/visualize_gauss_done \
