--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -71,10 +71,10 @@ input_plot: ./data/plots/input_done
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/test.model\
+		./data/mnist_samp_valid.h5 ./models/test_pred.model\
 		cnn ./data/normalization_factors.csv\
-		50 1e-3 -log False\
-		-pretrained False ./models/mse_loss.model \
+		150 1e-3 -log False\
+		-pretrained False ./models/test.model\
 		-inspection True
 		touch ./training_done
 
