predict real and imag part

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -71,10 +71,10 @@ input_plot: ./data/plots/input_done
 ./training_done:
 		mkdir -p models/
 		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/outsourc_fft.model\
+		./data/mnist_samp_valid.h5 ./models/outsourc_fft500.model\
 		cnn ./data/normalization_factors.csv\
-		10 1e-3 -log False\
-		-pretrained False ./models/two_channels.model \
+		500 1e-3 -log False\
+		-pretrained False ./models/outsourc_fft40.model \
 		-inspection True
 		# touch ./training_done
 
