--- a/pointsources/Makefile
+++ b/pointsources/Makefile
@@ -2,16 +2,16 @@
 # Analysis steps
 #
 
-all:	mnist_fft\
-		mnist_samp\
+all:	pointsources_fft\
+		clean_samp\
+		pointsources_samp\
 		calc_normalization\
 		clean_training\
 		cnn_training\
-		input_plot
 
-quick_data_and_training: mnist_fft_quick\
+quick_data_and_training: pointsources_fft_quick\
 						 clean_samp\
-						 mnist_samp\
+						 pointsources_samp\
 						 calc_normalization\
 						 clean_training\
 						 cnn_training
@@ -20,17 +20,18 @@ training: calc_normalization\
                                                  clean_training\
                                                  cnn_training
 
-#--------------------------------------------------------
-
-mnist_samp:	mnist_samp_train\
-			mnist_samp_valid
 
 #--------------------------------------------------------
 
-mnist_fft: ./data/mnist_fft_done
-mnist_fft_quick: ./data/mnist_fft_done_quick
-mnist_samp_train: ./data/mnist_samp_train.h5
-mnist_samp_valid: ./data/mnist_samp_valid.h5
+pointsources_samp:	pointsources_samp_train\
+				pointsources_samp_valid
+
+#--------------------------------------------------------
+
+pointsources_fft: ./data/pointsources_fft_done
+pointsources_fft_quick: ./data/pointsources_fft_done_quick
+pointsources_samp_train: ./data/pointsources_samp_train.h5
+pointsources_samp_valid: ./data/pointsources_samp_valid.h5
 calc_normalization: ./data/normalization_factors.csv
 cnn_training: ./training_done
 input_plot: ./data/plots/input_done
@@ -39,30 +40,32 @@ input_plot: ./data/plots/input_done
 #	Tasks
 #
 
-./data/mnist_fft_done:
+./data/pointsources_fft_done:
 		mkdir -p data/
-		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -test False -noise False
-		touch ./data/mnist_fft_done
+		python create_pointsources_fft.py ./data\
+		20000 784 20\
+		-test False -noise False
+		touch ./data/pointsources_fft_done
 
-./data/mnist_fft_done_quick:
+./data/pointsources_fft_done_quick:
 		mkdir -p data/
-		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -test True -noise False
-		touch ./data/mnist_fft_done
+		python create_pointsources_fft.py ./data\
+		500 784 10\
+		-test True -noise False
+		touch ./data/pointsources_fft_done
 
-./data/mnist_samp_train.h5:
+./data/pointsources_samp_train.h5:
 		python create_mnist_fft_sampled.py\
-		data/mnist_train.h5 data/mnist_samp_train.h5\
+		data/pointsources_train.h5 data/pointsources_samp_train.h5\
 		../sampling/layouts/vlba.txt -train True\
 		-specific_mask True\
 		-lon -80\
 		-lat 50\
 		-steps 50
 
-./data/mnist_samp_valid.h5:
+./data/pointsources_samp_valid.h5:
 		python create_mnist_fft_sampled.py\
-		data/mnist_valid.h5 data/mnist_samp_valid.h5\
+		data/pointsources_valid.h5 data/pointsources_samp_valid.h5\
 		../sampling/layouts/vlba.txt -train False\
 		-specific_mask True\
 		-lon -80\
@@ -72,16 +75,16 @@ input_plot: ./data/plots/input_done
 ./data/normalization_factors.csv:
 		python calculate_normalization.py\
 		-log False -use_mask True\
-		data/mnist_samp_train.h5 data/mnist_samp_valid.h5\
+		data/pointsources_samp_train.h5 data/pointsources_samp_valid.h5\
 		data/normalization_factors.csv
 
 ./training_done:
 		mkdir -p models/
-		python train_cnn.py ./data/mnist_samp_train.h5\
-		./data/mnist_samp_valid.h5 ./models/cnn_mnist.model\
-		cnn ./data/normalization_factors.csv\
+		python train_cnn.py ./data/pointsources_samp_train.h5\
+		./data/pointsources_samp_valid.h5 ./models/autoencoder_pointsources.model\
+		autoencoder ./data/normalization_factors.csv\
 		50 1e-3 -log False\
-		-pretrained False ./models/autoencoder_mnist.model \
+		-pretrained True ./models/autoencoder_mnist.model \
 		-inspection False
 		touch ./training_done
 
