Final changes for the find_lr script
Removal of unnecessary imports, comeback for the pretrained option and
optional saving of the resulting plot.

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -83,10 +83,9 @@ find_lr: ./lr_find
 		mkdir -p models/
 		python find_lr.py ./data/mnist_samp_train.h5\
 		./data/mnist_samp_valid.h5 ./models/test_pred.model\
-		cnn ./data/normalization_factors.csv\
-		100 1e-3 -log False\
+		cnn ./data/normalization_factors.csv -log False\
 		-pretrained False ./models/test.model\
-		-inspection True
+		-save False
 
 ./data/plots/input_done:
 		mkdir -p data/
