trying gaussian instead of pointsources

--- a/gauss/Makefile
+++ b/gauss/Makefile
@@ -2,16 +2,16 @@
 # Analysis steps
 #
 
-all:	pointsources_fft\
+all:	gauss_fft\
 		clean_samp\
-		pointsources_samp\
+		gauss_samp\
 		calc_normalization\
 		clean_training\
 		cnn_training\
 
-quick_data_and_training: pointsources_fft_quick\
+quick_data_and_training: gauss_fft_quick\
 						 clean_samp\
-						 pointsources_samp\
+						 gauss_samp\
 						 calc_normalization\
 						 clean_training\
 						 cnn_training
@@ -23,15 +23,15 @@ training: calc_normalization\
 
 #--------------------------------------------------------
 
-pointsources_samp:	pointsources_samp_train\
-				pointsources_samp_valid
+gauss_samp:	gauss_samp_train\
+				gauss_samp_valid
 
 #--------------------------------------------------------
 
-pointsources_fft: ./data/pointsources_fft_done
-pointsources_fft_quick: ./data/pointsources_fft_done_quick
-pointsources_samp_train: ./data/pointsources_samp_train.h5
-pointsources_samp_valid: ./data/pointsources_samp_valid.h5
+gauss_fft: ./data/gauss_fft_done
+gauss_fft_quick: ./data/gauss_fft_done_quick
+gauss_samp_train: ./data/gauss_samp_train.h5
+gauss_samp_valid: ./data/gauss_samp_valid.h5
 calc_normalization: ./data/normalization_factors.csv
 cnn_training: ./training_done
 input_plot: ./data/plots/input_done
@@ -40,32 +40,32 @@ input_plot: ./data/plots/input_done
 #	Tasks
 #
 
-./data/pointsources_fft_done:
+./data/gauss_fft_done:
 		mkdir -p data/
-		python create_pointsources_fft.py ./data\
-		20000 784 15\
+		python create_gauss_fft.py ./data\
+		50000 15 True\
 		-test False -noise False
-		touch ./data/pointsources_fft_done
+		touch ./data/gauss_fft_done
 
-./data/pointsources_fft_done_quick:
+./data/gauss_fft_done_quick:
 		mkdir -p data/
-		python create_pointsources_fft.py ./data\
-		500 784 10\
+		python create_gauss_fft.py ./data\
+		500 10 True\
 		-test True -noise False
-		touch ./data/pointsources_fft_done
+		touch ./data/gauss_fft_done
 
-./data/pointsources_samp_train.h5:
+./data/gauss_samp_train.h5:
 		python create_mnist_fft_sampled.py\
-		data/pointsources_train.h5 data/pointsources_samp_train.h5\
+		data/gauss_train.h5 data/gauss_samp_train.h5\
 		../sampling/layouts/vlba.txt -train True\
 		-specific_mask True\
 		-lon -80\
 		-lat 50\
 		-steps 50
 
-./data/pointsources_samp_valid.h5:
+./data/gauss_samp_valid.h5:
 		python create_mnist_fft_sampled.py\
-		data/pointsources_valid.h5 data/pointsources_samp_valid.h5\
+		data/gauss_valid.h5 data/gauss_samp_valid.h5\
 		../sampling/layouts/vlba.txt -train False\
 		-specific_mask True\
 		-lon -80\
@@ -75,16 +75,16 @@ input_plot: ./data/plots/input_done
 ./data/normalization_factors.csv:
 		python calculate_normalization.py\
 		-log False -use_mask True\
-		data/pointsources_samp_train.h5 data/pointsources_samp_valid.h5\
+		data/gauss_samp_train.h5 data/gauss_samp_valid.h5\
 		data/normalization_factors.csv
 
 ./training_done:
 		mkdir -p models/
-		python train_cnn.py ./data/pointsources_samp_train.h5\
-		./data/pointsources_samp_valid.h5 ./models/unet_pointsources.model\
+		python train_cnn.py ./data/gauss_samp_train.h5\
+		./data/gauss_samp_valid.h5 ./models/unet_gauss.model\
 		UNet ./data/normalization_factors.csv\
-		50 1e-3 -log False\
-		-pretrained True ./models/unet_gauss.model \
+		1000 1e-3 -log False\
+		-pretrained False ./models/unet_gauss.model \
 		-inspection False
 		touch ./training_done
 
