--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -4,5 +4,6 @@ simulate_bundles: ./data/bundles_done
 ./data/bundles_done:
 		mkdir -p data/
 		python simulate_bundles.py \
+		1 1024 128 data/gaussian_sources_ \
 		-noise False
-		touch ./data/bundles_done
+		# touch ./data/bundles_done
