--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -8,6 +8,11 @@ simulate_bundles: ./data/bundles_done
 		-noise False
 		# touch ./data/bundles_done
 
+./data/fft_done:
+		python create_fft_pairs.py data/ \
+		./data -test True -noise False
+		# touch ./data/mnist_fft_done
+
 
 clean_data:
 	rm -r data/
